<resources>
    <string name="app_name">Database App</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="course_and_year">Course and Year</string>
    <string name="submit">Submit</string>
    <string name="view_all">View All</string>
    <string name="tv_title">STUDENT STATUS FORM</string>
    <string name="tv_list_title">STUDENT STATUS LIST</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
</resources>